--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ finetune/cogvideox5b-lora-single-node-delegator-noisewarp-Oct16/checkpoint-200
 finetune/cogvideox5b-lora-single-node-delegator-noisewarp-Oct16-RandomDegradation
 finetune/cogvideox5b-lora-single-node-delegator-noisewarp-Oct16-RandomDegradation-LargerBatchSize
 finetune/cogvideox5b-lora-single-node-delegator-noisewarp-Oct16-RandomDegradation-LargerBatchSize-SmallLearnRate
+finetune/cogvideox5b-lora-single-node-delegator-noisewarp-Oct16-RandomDegradation-LargerBatchSize-SmallLearnRate-LORA4096-0Degrad/checkpoint-200
+finetune/cogvideox5b-lora-single-node-delegator-noisewarp-Oct16-RandomDegradation-LargerBatchSize-SmallLearnRate-LORA512-0Degrad
